Thu Mar 12 15:33:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* experimental release 1.1b9_01.

	* range.c (range_s_new): check values by `first <= last'.

	* parse.y (lastline_set): fixed offset for $_ and $~ in the local
	  variable space.

Wed Mar 11 02:14:17 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.c (io_gets): handle normal case specially for speed.

	* eval.c (rb_disable_super): function to disable superclass's
	  method explicitly.

	* eval.c (rb_eval): inherits previous method definition's
	  NOEX_UNDEF-ness, if exists.

	* class.c (rb_define_method): disables superclass's overriding
 	  method by default.

Wed Mar 11 01:40:48 1998  MAEDA shugo  <shugo@po.aianet.ne.jp>

	* numeric.c (flo_gt,etc.): do not depend on `<=>', to handle NaN.

Tue Mar 10 00:03:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* ruby.c (load_file): understands multiple options in #! line.

	* regex.c (re_compile_pattern): support for [:alpha:] etc.

Mon Mar  9 16:53:51 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* io.h (GetOpenFile): embed io_check_closed in GetOpenFile.

	* sprintf.c (f_sprintf): zero padding failed for negative
	  integers.

	* sprintf.c (remove_sign_bits): failed to remove some bits.

Sat Mar  7 21:51:46 1998  MAEDA shugo  <shugo@po.aianet.ne.jp>

	* class.c (ins_methods_i): body may be NULL for some case.

Fri Mar  6 17:23:07 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* regex.c (mbcinit): table driven mbchar detection.

	* object.c (obj_alloc): check for allocating instance for the
	  primitive classes (mostly perfect).

	* ext/curses/curses.c (curses_finalize): restore original state at 
	  interpreter temination.

	* ext/curses/curses.c (curses_addstr): forgot to check argument
	  type (caused SEGV).  now uses STR2CSTR() macro.

Thu Mar  5 13:47:39 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>

	* eval.c (block_pass): accepts method object as block args.

	* eval.c (f_missing): use any_to_s() for stringify.
