@@ -1,3 +1,10 @@
+Fri Mar 13 13:49:24 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
+
+	* object.c (mod_clone): need to dups constants and instance
+	  variables.
+
+	* eval.c (rb_eval): forgot to initialize body for NODE_DEFS.
+
 Thu Mar 12 15:33:57 1998  Yukihiro Matsumoto  <matz@netlab.co.jp>
 
 	* experimental release 1.1b9_01.
